# tools

./: .gitignore  AGENTS.md  README.md  app.py  index.html  pyproject.toml  run.sh  tools.json
.github/workflows/: update-tools.yml
css/: style.css
js/: i18n.js  main.js
js/locales/: en.json  zh-CN.json
scripts/: scan-tools.js
tools/base64-tool/: index.html
tools/color-picker/: index.html  main.js  style.css
tools/github-hosts/: index.html  main.js  style.css
tools/image-editor/: index.html  main.js  style.css
tools/json-formatter/: index.html
tools/python-ide/: enhanced-hint.js  index.html  python-ide.css  python-ide.js
tools/remove-background/: index.html  main.js  style.css
tools/snake-game/: .gitignore  Cargo.toml  index.html  main.js  style.css
tools/snake-game/pkg/: .gitignore  snake_game.js  snake_game_bg.wasm
tools/snake-game/src/: lib.rs
tools/timestamp-converter/: index.html
tools/video-editor/: .gitignore  app.js  index.html  preview-engine.js  style.css
tools/video-editor/wasm/: .gitignore  Cargo.toml
tools/video-editor/wasm-pkg/: .gitignore  package.json  video_editor_core.d.ts  video_editor_core.js  video_editor_core_bg.wasm  video_editor_core_bg.wasm.d.ts
tools/video-editor/wasm/src/: lib.rs  preview.rs  timeline.rs
