[package]
name = "video-editor-core"
version = "0.1.0"
edition = "2021"
authors = ["Video Editor Team"]
description = "Core video editing engine in Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  "CanvasRenderingContext2d",
  "ImageData",
  "HtmlCanvasElement",
  "HtmlVideoElement",
  "HtmlImageElement",
  "OffscreenCanvas",
  "OffscreenCanvasRenderingContext2d",
]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
